# echo-surface

./: .dockerignore  .gitignore  .gitmodules  BUILD.bazel  DIRECTORS_NOTES.md  Dockerfile  MODULE.bazel  README.md  TIDES_SPEC.md  bootstrap.sh  docker-compose.yml  echo_adapter_v0.md  index.html  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
examples/echo/: two_squares_one_contour.json
public/: BUILD.bazel
scripts/: build_echo_pages.py  compile_echo_scene.py  run_echo_pipeline.sh
src/: App.tsx  BUILD.bazel  styles.css
src/components/: BUILD.bazel  EchoSurface.tsx  HowToPlay.tsx
src/emergence/: BUILD.bazel  memory.ts
src/interaction/: BUILD.bazel  grammar.ts
src/music/: BUILD.bazel  engine.ts  taste.ts
src/rendering/: BUILD.bazel  emitters.ts  glyphs.ts
src/surface/: BUILD.bazel  contour.ts  model.ts  resonanceGhost.ts
src/world/: BUILD.bazel  scope.ts
tests/: test_adapter_canonical.py  test_generated_pages.py
tools/: build_demo.sh  capture_guide.sh  dev_server.sh  docker_down.sh  docker_up.sh  test_zoom.js  test_zoom.sh
